@@ -4,3 +4,9 @@ and color change of middle circle based on the available balance.
 
 ![Screenshot](src/main/resources/media/application_screenshot.PNG)
 
+If the Program does not work please download "javafx-sdk-11.0" and add all the jar-files in
+Javafx-sdk-11.0.2\lib\ to the global library.
+VM options: --module-path %java path% --add-modules javafx.controls,javafx.fxml
+![Screenshot](src/main/resources/media/fix_vm_options.png)
+
+
